·持续优化EKF代码优雅度

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,7 @@ add_executable(JLURoboVision
         Armor/predictor/kalman_filter.hpp
         Armor/predictor/AntiScopperil.cpp
         Armor/predictor/AntiScopperil.h
+        Armor/predictor/EKF.hpp        
         )
 
 
